More docs theme building

--- a/docs/src/404.md
+++ b/docs/src/404.md
@@ -1,7 +1,12 @@
 ---
 permalink: /404.html
-layout: default
+layout: full
 title: Page not found
 ---
 
-The requested page could not be found.
+<div class="flex items-center justify-center text-center w-full h-full">
+  <div>
+    <h1 class="text-3xl font-extralight text-indigo-600 mb-4">{{ resource.data.title }}</h1>
+    <p>The requested page could not be found.</p>
+  </div>
+</div>
