--- a/docs/src/404.md
+++ b/docs/src/404.md
@@ -7,6 +7,7 @@ title: Page not found
 <div class="flex items-center justify-center text-center w-full h-full">
   <div>
     <h1 class="text-3xl font-extralight text-indigo-600 mb-4">{{ resource.data.title }}</h1>
-    <p>The requested page could not be found.</p>
+    <p class="mb-2">It looks like that page doesn't exist, or has been moved.</p>
+    <p><a href="/guide/overview/" class="underline">Go to the guide &rarr;</a></p>
   </div>
 </div>
