--- a/docs/src/404.md
+++ b/docs/src/404.md
@@ -8,6 +8,6 @@ title: Page not found
   <div>
     <h1 class="text-3xl font-extralight text-indigo-600 mb-4">{{ resource.data.title }}</h1>
     <p class="mb-2">It looks like that page doesn't exist, or has been moved.</p>
-    <p><a href="/guide/overview/" class="underline">Go to the guide &rarr;</a></p>
+    <p><a href="/guide//" class="underline">Go to the guide &rarr;</a></p>
   </div>
 </div>
